--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
+		"ajv": "^8.3.0",
 		"next": "^10.2.0",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"ts-json-schema-generator": "^0.92.0"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.4"
