--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"next": "^10.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.92.0"
 	},
 	"devDependencies": {
