--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
+		"@mdi/js": "^5.9.55",
+		"@mdi/react": "^1.5.0",
 		"ajv": "^8.3.0",
 		"next": "^10.2.0",
 		"react": "^17.0.2",
