--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"timecode-boss": "^4.2.3",
-		"ts-json-schema-generator": "^0.92.0"
+		"ts-json-schema-generator": "^0.92.0",
+		"zustand": "^3.5.1"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.4"
