--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"next": "^10.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-spring": "^9.1.2",
+		"react-use-gesture": "^9.1.3",
 		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.92.0",
 		"zustand": "^3.5.1"
