--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@mdi/js": "^5.9.55",
 		"@mdi/react": "^1.5.0",
 		"ajv": "^8.3.0",
+		"mousetrap": "^1.6.5",
 		"next": "^10.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
