--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-use-gesture": "^9.1.3",
 		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.92.0",
+		"uuid": "^8.3.2",
 		"zustand": "^3.5.1"
 	},
 	"devDependencies": {
