--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
+		"@material-ui/lab": "^4.0.0-alpha.58",
 		"@mdi/js": "^5.9.55",
 		"@mdi/react": "^1.5.0",
 		"ajv": "^8.3.0",
