--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@material-ui/lab": "^4.0.0-alpha.58",
 		"@mdi/js": "^5.9.55",
 		"@mdi/react": "^1.5.0",
+		"@types/mousetrap": "^1.6.8",
 		"@types/uuid": "^8.3.0",
 		"ajv": "^8.3.0",
 		"mousetrap": "^1.6.5",
