--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"license": "MIT",
 	"private": false,
 	"dependencies": {
+		"@hookstate/core": "^3.0.8",
 		"@material-ui/core": "^4.11.4",
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/lab": "^4.0.0-alpha.58",
@@ -24,8 +25,7 @@
 		"react-use-gesture": "^9.1.3",
 		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.92.0",
-		"uuid": "^8.3.2",
-		"zustand": "^3.5.1"
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.4"
