--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-use-gesture": "^9.1.3",
 		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.93.0",
+		"use-mousetrap": "^1.0.4",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
