project file beginnings

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
 		"@types/mousetrap": "^1.6.8",
 		"@types/uuid": "^8.3.0",
 		"ajv": "^8.3.0",
+		"copy-webpack-plugin": "^9.0.1",
+		"jszip": "^3.6.0",
+		"mediainfo.js": "^0.1.5",
 		"mousetrap": "^1.6.5",
 		"next": "^11.0.1",
 		"react": "^17.0.2",
