--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@mdi/js": "^5.9.55",
 		"@mdi/react": "^1.5.0",
 		"@types/mousetrap": "^1.6.8",
+		"@types/semver": "^7.3.8",
 		"@types/uuid": "^8.3.0",
 		"ajv": "^8.3.0",
 		"copy-webpack-plugin": "^9.0.1",
@@ -33,6 +34,7 @@
 		"react-dom": "^17.0.2",
 		"react-spring": "^9.1.2",
 		"react-use-gesture": "^9.1.3",
+		"semver": "^7.3.5",
 		"timecode-boss": "^4.2.3",
 		"ts-json-schema-generator": "^0.93.0",
 		"use-mousetrap": "^1.0.4",
